--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -18,7 +18,7 @@
   "driveMotorType": "vortex",
   "driveCurrentLimit": 60.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.288925,
+  "flModuleX": 0.289,
   "flModuleY": 0.288925,
   "frModuleX": 0.288925,
   "frModuleY": -0.288925,
@@ -28,5 +28,7 @@
   "brModuleY": -0.288925,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
-  "robotFeatures": []
+  "robotFeatures": [
+    "{\"name\":\"Line\",\"type\":\"line\",\"data\":{\"start\":{\"x\":0.3,\"y\":0.0},\"end\":{\"x\":0.5,\"y\":0.0},\"strokeWidth\":0.1}}"
+  ]
 }
